Bug 346050 - No subpixel rendering in Task Manager
Summary: No subpixel rendering in Task Manager
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.2.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-10 17:15 UTC by Markus Trippelsdorf
Modified: 2016-08-23 18:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
zoomed in screenshot (276.30 KB, image/png)
2015-04-10 17:20 UTC, Markus Trippelsdorf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Trippelsdorf 2015-04-10 17:15:11 UTC
Text is rendered with grayscale smoothing.


Reproducible: Always
Comment 1 Markus Trippelsdorf 2015-04-10 17:20:14 UTC
Created attachment 91979 [details]
zoomed in screenshot
Comment 2 Eike Hein 2015-05-19 13:32:12 UTC
This is because QPainter-on-QWidget doesn't do subpixel rendering on Qt::transparent (well, it's mathematically impossible). To address this we need to get away from the C++ item for text labels - some work has been done on replacing it with Qt Quick Text + shaders, but it's not good enough yet.
Comment 3 Eike Hein 2016-08-23 18:58:18 UTC
Git commit 6c3b01c52f4a7daac11a8f22cecc5e551d9bfcbb by Eike Hein.
Committed on 23/08/2016 at 18:57.
Pushed by hein into branch 'master'.

Drop the C++ text label implementation.

Summary:
After D2281 set the stage, this change drops the C++ label in favor
of the PlasmaComponents-based label added then. A consensus has
emerged that the things the C++ label did that the new label does
not do (fadeout gradients, shadowing) are not actually desirable.
Related: bug 360119, bug 357242

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2418

M  +0    -2    applets/taskmanager/CMakeLists.txt
M  +0    -3    applets/taskmanager/package/contents/config/main.xml
D  +0    -30   applets/taskmanager/package/contents/ui/CppTextLabel.qml
D  +0    -32   applets/taskmanager/package/contents/ui/QmlTextLabel.qml
M  +9    -10   applets/taskmanager/package/contents/ui/Task.qml
D  +0    -154  applets/taskmanager/plugin/blur.cpp
M  +0    -2    applets/taskmanager/plugin/taskmanagerplugin.cpp
D  +0    -278  applets/taskmanager/plugin/textlabel.cpp
D  +0    -80   applets/taskmanager/plugin/textlabel.h

http://commits.kde.org/plasma-desktop/6c3b01c52f4a7daac11a8f22cecc5e551d9bfcbb