Drop the C++ text label implementation.

Summary:
After D2281 set the stage, this change drops the C++ label in favor
of the PlasmaComponents-based label added then. A consensus has
emerged that the things the C++ label did that the new label does
not do (fadeout gradients, shadowing) are not actually desirable.

BUG:346050
BUG:360119
BUG:357242

Reviewers: #plasma, broulik

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D2418